# titan-ast

./: NOTICE  README.md
resources/: titanAstGrammar.automata
runtime/cpp/titan-ast-runtime-gui/: CMakeLists.txt  main.cpp
runtime/cpp/titan-ast-runtime-gui/gui/: AstGuiOutputer.cpp  AstGuiOutputer.h  GuiApi.cpp  GuiApi.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  StringTree.cpp  StringTree.h  StringTreeGraphicsItem.cpp  StringTreeGraphicsItem.h
runtime/cpp/titan-ast-runtime-gui/lib/: AstRuntime.h  Runtime.h
runtime/cpp/titan-ast-runtime-lib/: Ast.cpp  Ast.h  AstAutomata.h  AstAutomataBuilder.cpp  AstAutomataBuilder.h  AstAutomataType.h  AstGeneratorResult2RichResultConverter.cpp  AstGeneratorResult2RichResultConverter.h  AstGrammar.cpp  AstGrammar.h  AstRuntimeException.cpp  AstRuntimeException.h  AstToken.cpp  AstToken.h  AutomataData.cpp  AutomataData.h  AutomataTmpAst.cpp  AutomataTmpAst.h  AutomataTmpToken.cpp  AutomataTmpToken.h  BacktrackingBottomUpAstAutomata.cpp  BacktrackingBottomUpAstAutomata.h  BacktrackingBottomUpBranch.cpp  BacktrackingBottomUpBranch.h  ByteBuffer.cpp  ByteBuffer.h  ByteBufferedInputStream.cpp  ByteBufferedInputStream.h  CMakeLists.txt  DerivedTerminalGrammarAutomata.cpp  DerivedTerminalGrammarAutomata.h  DerivedTerminalGrammarAutomataData.cpp  DerivedTerminalGrammarAutomataData.h  DfaTokenAutomata.cpp  DfaTokenAutomata.h  FaStateType.cpp  FaStateType.h  FollowFilterBacktrackingBottomUpAstAutomata.cpp  FollowFilterBacktrackingBottomUpAstAutomata.h  Grammar.cpp  (+49 more)
runtime/java/titan-ast-runtime/test-resources/: titanAstGrammar.automata  titanAstGrammar.txt
runtime/java/titan-ast/src/resources/: buildAstVisitor.bat  buildAutomata.bat  titanAstGrammar.automata  titanAstGrammar.txt
runtime/rust/titan-ast-runtime/titan-ast-runtime-gui/: build.rs
runtime/rust/titan-ast-runtime/titan-ast-runtime-gui/src/: ast_gui_outputer.rs  lib.rs  string_tree.rs  tree_data_builder.rs
runtime/rust/titan-ast-runtime/titan-ast-runtime-gui/ui/: AstWindow.slint  DataType.slint  TreeViewer.slint
runtime/rust/titan-ast-runtime/titan-ast-runtime-lib/src/: ast.rs  ast_application.rs  ast_automata.rs  ast_automata_builder.rs  ast_generator_result_to_rich_result_converter.rs  automata_data.rs  byte_buffer.rs  (+25 more)
src/resources/: Ast2ContextAstConvertor.txt  buildAstVisitor.bat  buildAutomata.bat  showAstView.bat  titanAstGrammar.automata  titanAstGrammar.txt
src/titan/ast/: AstApplication.java  AstContext.java  AstRuntimeException.java  CommandLineAstApplication.java  DefaultGrammarAutomataAstApplicationBuilder.java  DefaultGrammarFileAutomataAstApplicationBuilder.java  GrammarAutomataAstApplication.java  GrammarAutomataAstApplicationBuilder.java  GrammarFileAutomataAstApplication.java  IdGenerator.java  ResourceGenerator.java
src/titan/ast/autocode/: CodeGenerator.java
src/titan/ast/grammar/: AbstractRegExpBuilder.java  AstAutomataBuilder.java  DfaState.java  FaStateType.java  Grammar.java  GrammarAction.java  GrammarAttribute.java  GrammarFileAutomataAstApplication.java  GrammarType.java  KeyWordAutomataDetail.java  LanguageGrammar.java  LookaheadMatchingMode.java  NfaState.java  NonterminalGrammar.java  NonterminaltGrammar.java  PrimaryGrammarContent.java  RegExp.java  RelationshipQualifier.java  TerminalFragmentGrammar.java  TerminalGrammar.java  TextOfGrammarBuilder.java
src/titan/ast/input/: CommandLineArgParser.java  CommandLineParameters.java
src/titan/ast/logger/: Logger.java  LoggerLevelEnum.java
src/titan/ast/output/: AstGuiOutputer.java  FaGraphGuiOutputer.java  JComponent2PicConverter.java  StringTree.java  TokenOutputer.java
src/titan/ast/persistence/: AutomataDataBuilder.java  FileUtil.java  PersistentAutomataBuilder.java  PersistentData.java  PersistentDataFile.java
src/titan/ast/test/: StopWatch.java
src/titan/ast/util/: FileUtil.java
src/titan/util/: StringUtils.java
test-resources/c/: automata.data  helloworld.c
test-resources/debug/: debug.txt
test-resources/diy/: automata.data  diy.grammar  diy.txt
test-resources/java/: Java8Lexer.grammar  Java8Parser.grammar  automata.data
test-resources/json/: automata.data
test-resources/titanlang/: helloworld.titan  titanLanguageAsciiLexer.txt  titanLanguageCharsLiteralLexer.txt  titanLanguageChineseLexer.txt  titanLanguageEncodingLexer.txt  titanLanguageGrammar.automata  titanLanguageParser.txt  titanLanguagePunctuationLexer.txt
test/ast/: titanAstGrammar.automata  titanAstGrammar.txt
test/c/: C.grammar  automata.data  helloworld.c
test/debug/: debug.grammar  debug.txt
test/diy/: automata.data  diy.grammar  diy.txt
test/follow/: follow.grammar  follow.txt
test/java/: Helloworld.java  Java8Lexer.grammar  Java8Parser.grammar  SimpleJava8Lexer.grammar  SimpleJava8Parser.grammar  automata.data
test/json/: SimpleJson.grammar  automata.data  json.grammar  titanLanguageConfig.json
test/nfareg/: automata.data  helloworld.txt  nfareg.grammar
test/titanlang/: automata.data  helloworld.titan  titanLanguageCharsLiteralLexer.txt  titanLanguageGrammar.automata  titanLanguageIdentifierLexer.txt  titanLanguageLexer.grammar  titanLanguageLexer.txt  titanLanguageNotTextTokenLexer.txt  titanLanguageNumberLiteralLexer.txt  titanLanguageParser.grammar  titanLanguageParser.txt
(+443 files in other folders)
